第一版完成

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # .env
-database_url=mysql://root:e996data@localhost:3306/svc_ids
+database_url=mysql+pymysql://root:123456@localhost:3306/svc_ids
+max_svc_id=65535
