--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # .env
-database_url=mysql+pymysql://root:123456@localhost:3306/svc_ids
+database_url=mysql+pymysql://root:e996data@localhost:3306/svc_ids
 max_svc_id=65535
 log_to_console=True
+port=8000
